--- a/config.toml
+++ b/config.toml
@@ -32,7 +32,7 @@ googleAnalytics = "UA-89385252-1"
 		brand = "PrincipalGroup"
 
 		[params.navigation.links]
-			about     = "Abou"
+			about     = "About"
 			services  = "Services"
 			#portfolio = "Portfolio"
 			contact   = "Contact"
